# LivingEBG_EvidenceSurveillance_PCOS2023

./: .gitattributes  .gitignore  LICENSE  README.md  embmedline_ris_pipeline.py  openalex_booleankw_overarching_search.py  openalex_keywordsearch.py  openalex_overarching_search.py  openalex_topic_search_dev.ipynb  ovearching_search_results.csv  pubmed_overarching_search.py  pyproject.toml
analysis/: analysis.Rmd  analysis.py
analysis/dataset/: PCOS_Guideline_Dataset_srtype.xlsm  groundtruth_eval.parquet  overall_evalmetrics_df.xlsx  overall_evalmetrics_df_analysis.xlsx
convenience_scripts/: cleanhtmltags.py  eval.py  goldset_setup.py  groundtruth_setup.py  openalex_keywordsearch.py  openalex_topic_search_dev.ipynb  openalex_topicsearch_builder.py
dataset/: combined_goldset.parquet  combined_goldset.xlsx  combined_goldset_oatopics.parquet  combined_goldset_oatopics.xlsx  fullgroundtruth_valid_apimerge_df.parquet  fullgroundtruth_valid_apimerge_df.xlsx
dataset/_superseded/: PCOS_Guideline_Dataset.xlsm  PCOS_Guideline_Dataset_checked.xlsm  all_unsuccessful_nodupe_rob.csv
libraries/: convenience_func.py  eval.py  openalex_client.py  openalex_keywordsearch.py  openalex_keywordsearch_dev.py  openalex_topicsearch_builder.py  pubmed_client.py  vector_search.py
src/: .env_example  embmedline_ris_pipeline.py  goldset_groundtruth_setup.py  main_overarching.py  main_topicspecific.py  main_vectorsearch.py  openalex_keywordsearch.py  openalex_overarching_search.py  pubmed_overarching_search.py
src/dataset/: combined_goldset.parquet  combined_goldset.xlsx  (+8 more)
(+201 files in other folders)
